# Software

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RoboCup11.1  ballFilterFast.txt  main.cpp  strategy.ims  vcpkg.json
CMake/: FindZeroMQ.cmake  Helpers.cmake
Common/: GameSetting.h  MATHS_REGRESSION_PARABOLIC.cpp  MedianFilter.h  Vector.cpp  Vector.h  distance.cpp  distance.h  kbhit.cpp  net_log.cpp  net_log.h  parameter.h  timer.cpp  timer.h
Data/: ballFilterSlow.txt  config.toml  config_schema.json  strategy.ims  tracker.cfg
Network/: PracticalSocket.cpp
Reality/Referee/: referee.cpp  referee.h  referee_new.cpp  referee_new.h
Reality/Vision/: Vision.h  VisionBall.cpp  VisionComminucation.cpp  VisionRobot.cpp  VisionSetting.h  WorldState.h  motionANN.cpp  motionANN.h  vision.cpp  visionPrediction copy 2.cpp  visionPrediction copy 3.cpp  visionPrediction copy 4.cpp  visionPrediction copy.cpp  visionPrediction.cpp  visionPrediction_Binary.cpp
Reality/Vision/ANN/: ANN.cpp  ANN.h  Neuron.cpp  Neuron.h
Reality/Vision/Protobuf/: Aidebug.java  ImmortalsProtocols.java  ImmortalsProtocols.pb.cc  ImmortalsProtocols.pb.h  ImmortalsProtocols.proto  MessagesRobocupSslWrapper.java  aidebug.pb.cc  aidebug.pb.h  aidebug.proto  messages_blob.pb.cc  messages_blob.pb.h  messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h  referee.pb.cc  referee.pb.h  strategy.pb.cc  strategy.pb.h  strategy.proto
RoboCup11.xcodeproj/: mohammadhoseinfazeli.mode1v3  mohammadhoseinfazeli.pbxuser  project.pbxproj  sadeqsalehi.mode1v3  sadeqsalehi.pbxuser
Soccer/: aiBase.cpp  aiBase.h  robotCommand.cpp  robotCommand.h
Soccer/ai09/: CalcIsDefending.cpp  DefGhuz.cpp  DefHi.cpp  FreeAngle.cpp  GK.cpp  Mark2Goal.cpp  NormalPlay.cpp  OneDef.cpp  OneTouchDetector.h  Robgot.cpp  Robot copy.cpp  Robot.cpp  Robot.h  TurnShoot.cpp  TwoDef.cpp  VelocityProfile.h  ai09.cpp  ai09.h  ai09_process.cpp  attackFuckingAngle.cpp  backPass.cpp  ballIsGoaling.cpp  ballTrajectory.cpp  circle_ball.cpp  cmuAngle.cpp  data_flow.cpp  defenceWall.cpp  errt_setObs.cpp  evaluate.cpp  findCruncherOpp.cpp  findGusheRobot.cpp  findJeloOpps.cpp  gkHi.cpp  gk_ghuz.cpp  goalBlocked.cpp  halt.cpp  helpers.cpp  helpers.h  internalFinalize.cpp  internalProcessData.cpp  (+17 more)
Soccer/ai09/errt/: errt.cpp  errt.h  line.h  obstacle.cpp  obstacle.h  obstacle_circle.cpp  obstacle_map.cpp  obstacle_new.h  obstacle_rectangle.cpp  tree.cpp  tree.h
Soccer/ai09/plays/: NewNormalPlay.cpp  NormalPlayAtt.cpp  NormalPlayDef.cpp  corner_simple_chip copy.cpp  corner_simple_chip.cpp  corner_simple_pass.cpp  corner_switch_pass.cpp  corner_their_def_ajor.cpp  corner_their_def_karkas.cpp  corner_their_global.cpp  corner_their_khafan.cpp  corner_their_marker_ajor.cpp  corner_their_marker_karkas.cpp  corner_their_mrl.cpp  corner_their_skuba.cpp  kickoff_their_back_def.cpp  kickoff_their_one_wall.cpp  kickoff_us_chip.cpp  kickoff_us_farar.cpp  kickoff_us_pass.cpp  kickoff_us_zamini.cpp  penalty_their_gool.cpp  penalty_their_simple.cpp  (+17 more)
Soccer/ai11/: ai11.h  tactic.h
Source/: CMakeLists.txt  grsim_fwd.cpp  grsim_fwd.h  main.cpp  pch.h
Source/Common/: CMakeLists.txt  ControlBlock.h  GameSetting.h  MATHS_REGRESSION_PARABOLIC.h  MedianFilter.h  PID_Controller.cpp  PID_Controller.h  Random.cpp  Random.h  Vector.cpp  Vector.h  common_colors.cpp  common_colors.h  distance.cpp  kbhit.cpp  kbhit.h  linear.cpp  linear.h  net_log.cpp  net_log.h  parameter.cpp  parameter.h  poly_find.cpp  poly_find.h  services.h  setting.h  timer.cpp  timer.h
Source/Common/com/: data_lite.h  defines.h  proto_bridge.cpp  proto_bridge.h  writer.c  writer.h
Source/Common/config/: config.cpp  config.h
Source/Common/debug/: debug.cpp  debug.h
Source/Common/logging/: logging.cpp  logging.h
Source/Common/math/: MedianFilter.h  Vec4.h  Vector.cpp  Vector.h  distance.cpp  distance.h  helpers.cpp  helpers.h
Source/Common/network/: netraw.cpp  netraw.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
Source/Network/: PracticalSocket.cpp  PracticalSocket.h
Source/Reality/: CMakeLists.txt  WorldState.cpp  WorldState.h  main.cpp
Source/Reality/Com/: half.h  reader.c  reader.h
Source/Reality/Debugger/: debuggerBase.cpp  debuggerBase.h
Source/Reality/Plotter/: plotter.cpp  plotter.h
Source/Reality/Referee/: game_state.h  referee.cpp  referee.h  referee_new.cpp  referee_new.h
Source/Reality/Referee_2018/: NewReferee.cpp  NewReferee.h  commands2018.h  game_state.h
Source/Reality/Sender/: Sender.cpp  Sender.h
Source/Reality/Sender/Protocol/: data_lite.h  defines.h  half.c  half.h  reader.c  reader.h  writer.c  writer.h
Source/Reality/Serial/: serial.cc  serial.h
Source/Reality/Vision/: IdGenerator.cpp  IdGenerator.h  Vision.cpp  Vision.h  VisionBall.cpp  VisionComminucation.cpp  VisionParam.cpp  VisionRobot.cpp  VisionSetting.h  WorldState.h  vision.cpp
Source/Reality/Vision/Extended_Kalman/: ball_tracker.cc  ball_tracker.h  configreader.cc  configreader.h  geometry.h  histogram.cc  histogram.h  kalman.cc  kalman.h  lineseg.cc  lineseg.h  macros.h  matrix.cc  matrix.h  polygon.cc  polygon.h  robot_tracker.cc  robot_tracker.h  socket.cc  socket.h  stats.cc  stats.h  timer.h  vector.h  vtracker.cc  vtracker.h
Source/Reality/Vision/Kalman/: FilteredObject.cpp  FilteredObject.h
Source/Reality/Vision/Protobuf/: ImmortalsProtocols.pb.h  MessagesRobocupSslDetection.java  MessagesRobocupSslGeometry.java  aidebug.pb.cc  aidebug.pb.h  messages_blob.pb.cc  messages_blob.proto  messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  referee.pb.h  strategy.pb.h
Source/Reality/Vision/cmu_kalman/: ball_tracker.cc  ball_tracker.h  configreader.cc  configreader.h  constants.h  kalman.cc  matrix.cc  matrix.h  net_vision.h  robot_tracker.cc  robot_tracker.h  util.h  vtracker.cc  vtracker.h
Source/Soccer/: CMakeLists.txt  aiBase.cpp  aiBase.h  main.cpp
(+155 files in other folders)
